# twitchat

./: .editorconfig  Cargo.toml  README.md  deny.toml  index-17ff231190f7120a.css  index-844b72de9146c173.js  index-844b72de9146c173_bg.wasm  index.html  package.json  twitchat-354494665197fe35.js  twitchat-354494665197fe35_bg.wasm
.github/workflows/: ci.yml
assets/: index.scss
src/: app.rs  de.rs  main.rs  models.rs
src/widgets/: container.rs  line.rs  mod.rs  status.rs
